tests/mtcp/error/error-mtcp-error5.pkt
0.000 socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
// 0.000 fcntl(3, F_GETFL) = 0x2 (flags O_RDWR)
0.000 fcntl(3, F_SETFL, O_RDWR|O_NONBLOCK) = 0

// Establish connection and verify that there was no error.
+0 connect(3, ..., ...) = -1 EINPROGRESS (Operation now in progress)
0.100 > S 0:0(0) <...>
+0.1 < S. 1:4882(4881) ack 1 win 24929
+0.1 > . 1:1(0) ack 1
